fixed alignment of search button

--- a/styles/style.css
+++ b/styles/style.css
@@ -57,6 +57,7 @@ input, button {
 .searchBar form input {
 	width: 400px;
 	padding: 5px;
+	vertical-align: middle;
 }
 
 .searchBar button {
@@ -65,8 +66,7 @@ input, button {
 	background-color: white;
 	height: 30px;
 	width: 30px;
-/*	position: relative;
-	bottom: -8px;*/
+	vertical-align: middle;
 }
 
 .searchBar button span {
